--- a/flutter_project/android/local.properties
+++ b/flutter_project/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=/opt/homebrew/Caskroom/android-platform-tools/35.0.2
-flutter.sdk=/Applications/development/flutter
+sdk.dir=/Users/edisonhussey/Library/Android/sdk
+flutter.sdk=/Applications/flutter
