--- a/flutter_project/pubspec.yaml
+++ b/flutter_project/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_settings_screens: ^0.2.0
+
+  
 
 dev_dependencies:
   flutter_test:
