--- a/flutter_project/pubspec.yaml
+++ b/flutter_project/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_settings_screens: ^0.3.4
   share_plus: ^9.0.0
+  flutter_spinkit: ^5.2.0
 
 
   
@@ -19,8 +20,22 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  flutter_native_splash: ^2.3.9
+
 
 flutter:
   uses-material-design: true
   assets:
     - assets/images/
+
+flutter_native_splash:
+  color: "#ffffff"  
+  image: assets/images/profilepic.jpg
+  image_dark: assets/images/profilepic.jpg
+  android: true  
+  ios: true  
+  android_gravity: center
+  ios_content_mode: center
+  android_background_color: Colors.white
+  ios_background_color: Colors.white  
+  
