--- a/flutter_project/pubspec.yaml
+++ b/flutter_project/pubspec.yaml
@@ -12,8 +12,9 @@ dependencies:
   flutter_settings_screens: ^0.3.4
   share_plus: ^9.0.0
   flutter_spinkit: ^5.2.0
-
-
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.1
   
 
 dev_dependencies:
@@ -21,7 +22,8 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.0
   flutter_native_splash: ^2.3.9
-
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.6
 
 flutter:
   uses-material-design: true
@@ -37,5 +39,4 @@ flutter_native_splash:
   android_gravity: center
   ios_content_mode: center
   android_background_color: Colors.white
-  ios_background_color: Colors.white  
-  
+  ios_background_color: Colors.white
