--- a/flutter_project/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/flutter_project/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,12 +1,11 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Applications/development/flutter
+FLUTTER_ROOT=/Users/ashwindu/development/flutter
 FLUTTER_APPLICATION_PATH=/Users/ashwindu/Documents/GitHub/SETP-Coursework-1/flutter_project
 COCOAPODS_PARALLEL_CODE_SIGN=true
-FLUTTER_TARGET=/Users/ashwindu/Documents/GitHub/SETP-Coursework-1/flutter_project/lib/main.dart
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=0.1.0
 FLUTTER_BUILD_NUMBER=0.1.0
 DART_OBFUSCATION=false
 TRACK_WIDGET_CREATION=true
 TREE_SHAKE_ICONS=false
-PACKAGE_CONFIG=/Users/ashwindu/Documents/GitHub/SETP-Coursework-1/flutter_project/.dart_tool/package_config.json
+PACKAGE_CONFIG=.dart_tool/package_config.json
