--- a/flutter_project/pubspec.yaml
+++ b/flutter_project/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  test: any
   flutter_lints: ^3.0.0
   flutter_native_splash: ^2.3.9
   hive_generator: ^2.0.1
