--- a/.github/workflows/android_build.yaml
+++ b/.github/workflows/android_build.yaml
@@ -32,6 +32,10 @@ jobs:
 
       - name: Build APK
         working-directory: ./flutter_project
-        run: flutter build apk
+        run: flutter build apk --release
 
-      
+      - name: Upload Release APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: android-apk
+          path: ./flutter_project/build/app/outputs/flutter-apk/app-release.apk
