--- a/.github/workflows/ios_build.yaml
+++ b/.github/workflows/ios_build.yaml
@@ -26,9 +26,10 @@ jobs:
 
       - name: Build IPA
         working-directory: ./flutter_project
-        run: flutter build ios --release --no-codesign
+        run: flutter build ipa --release --no-codesign
 
       - name: Upload Release IPA
         uses: actions/upload-artifact@v4
         with:
           name: ios-ipa
+          path: ./flutter_project/build/ios/ipa/*.ipa
