--- a/.github/workflows/ios_build.yaml
+++ b/.github/workflows/ios_build.yaml
@@ -41,4 +41,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ios-ipa
-          path: ./flutter_project/build/ios/ipa/*.ipa
+          path: ./flutter_project/App.ipa
